--- a/Exam/WeatherCustomView.xib
+++ b/Exam/WeatherCustomView.xib
@@ -16,7 +16,7 @@
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LZk-gu-AsI">
                     <rect key="frame" x="187" y="54" width="207" height="126"/>
-                    <color key="backgroundColor" systemColor="separatorColor"/>
+                    <color key="backgroundColor" systemColor="systemGray4Color"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d67-gD-dQZ" userLabel="lat">
                     <rect key="frame" x="20" y="90" width="159" height="20.5"/>
@@ -32,7 +32,7 @@
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" systemColor="systemGray4Color"/>
             <constraints>
                 <constraint firstItem="LZk-gu-AsI" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.5" id="6Jo-Ht-jhu"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="LZk-gu-AsI" secondAttribute="trailing" constant="20" id="6fh-RD-ix7"/>
@@ -60,8 +60,8 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="separatorColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
