--- a/Exam/View/Base.lproj/Main.storyboard
+++ b/Exam/View/Base.lproj/Main.storyboard
@@ -8,35 +8,107 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Hjem-->
         <scene sceneID="QzU-fo-xWq">
             <objects>
-                <viewController id="Ylf-ny-yJn" sceneMemberID="viewController">
+                <viewController id="Ylf-ny-yJn" customClass="HomeForecastController" customModule="Exam" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rZj-mT-8zG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Yoooo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2CN-kP-Hcr">
-                                <rect key="frame" x="186" y="305" width="48" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I75-yO-ml9">
+                                <rect key="frame" x="4" y="88" width="410" height="187"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dag" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EQc-gI-Zed">
+                                        <rect key="frame" x="60" y="40" width="53.5" height="120.5"/>
+                                        <fontDescription key="fontDescription" type="italicSystem" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="EQc-gI-Zed" firstAttribute="top" secondItem="I75-yO-ml9" secondAttribute="top" constant="40" id="2ej-cF-hMc"/>
+                                    <constraint firstAttribute="bottom" secondItem="EQc-gI-Zed" secondAttribute="bottom" constant="26.5" id="WuS-Lo-FxB"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="EQc-gI-Zed" secondAttribute="trailing" constant="20" symbolic="YES" id="bh3-gC-rQW"/>
+                                    <constraint firstItem="EQc-gI-Zed" firstAttribute="leading" secondItem="I75-yO-ml9" secondAttribute="leading" constant="60" id="fte-NH-5t6"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="in6-T1-ao9">
+                                <rect key="frame" x="0.0" y="273" width="414" height="350"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3kN-TJ-AJ6">
+                                <rect key="frame" x="0.0" y="636" width="414" height="126"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="I dag blir det regn," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0I3-Vx-6cC">
+                                        <rect key="frame" x="91" y="8" width="182.5" height="61.5"/>
+                                        <fontDescription key="fontDescription" type="italicSystem" pointSize="23"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="så ta med paraply!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="esx-qj-QNc">
+                                        <rect key="frame" x="90" y="55.5" width="184" height="71.5"/>
+                                        <fontDescription key="fontDescription" type="italicSystem" pointSize="23"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="esx-qj-QNc" firstAttribute="leading" secondItem="3kN-TJ-AJ6" secondAttribute="leading" constant="90" id="6zR-fK-lQc"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="esx-qj-QNc" secondAttribute="trailing" constant="20" symbolic="YES" id="KAd-zc-dRw"/>
+                                    <constraint firstItem="esx-qj-QNc" firstAttribute="height" secondItem="3kN-TJ-AJ6" secondAttribute="height" multiplier="0.568513" id="URQ-Kd-H29"/>
+                                    <constraint firstItem="0I3-Vx-6cC" firstAttribute="height" secondItem="3kN-TJ-AJ6" secondAttribute="height" multiplier="0.489796" id="VRO-mb-wkp"/>
+                                    <constraint firstItem="0I3-Vx-6cC" firstAttribute="leading" secondItem="3kN-TJ-AJ6" secondAttribute="leading" constant="91" id="ccc-xd-hZs"/>
+                                    <constraint firstAttribute="bottom" secondItem="esx-qj-QNc" secondAttribute="bottom" constant="-1" id="czH-Ip-yV5"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="0I3-Vx-6cC" secondAttribute="trailing" constant="20" symbolic="YES" id="jmJ-LK-DcE"/>
+                                    <constraint firstItem="0I3-Vx-6cC" firstAttribute="top" secondItem="3kN-TJ-AJ6" secondAttribute="top" constant="8" id="thc-Hc-dCC"/>
+                                </constraints>
+                            </view>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hih-Uj-lbc">
+                                <rect key="frame" x="0.0" y="44" width="0.0" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="6Wa-fH-aym"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mbh-ze-9c5"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Hih-Uj-lbc" secondAttribute="trailing" id="67U-3g-mLA"/>
+                            <constraint firstItem="Hih-Uj-lbc" firstAttribute="top" secondItem="mbh-ze-9c5" secondAttribute="top" id="AZL-zm-92z"/>
+                            <constraint firstItem="3kN-TJ-AJ6" firstAttribute="leading" secondItem="mbh-ze-9c5" secondAttribute="leading" id="Fev-yf-L8I"/>
+                            <constraint firstItem="I75-yO-ml9" firstAttribute="trailing" secondItem="mbh-ze-9c5" secondAttribute="trailing" id="L5A-0E-tfJ"/>
+                            <constraint firstItem="3kN-TJ-AJ6" firstAttribute="trailing" secondItem="mbh-ze-9c5" secondAttribute="trailing" id="LKK-qi-rOo"/>
+                            <constraint firstItem="in6-T1-ao9" firstAttribute="trailing" secondItem="mbh-ze-9c5" secondAttribute="trailing" id="PEy-4d-qjc"/>
+                            <constraint firstItem="Hih-Uj-lbc" firstAttribute="height" secondItem="rZj-mT-8zG" secondAttribute="height" multiplier="0.0491071" id="VpK-4v-xm8"/>
+                            <constraint firstItem="3kN-TJ-AJ6" firstAttribute="top" secondItem="in6-T1-ao9" secondAttribute="bottom" constant="13" id="WNx-9U-O9Z"/>
+                            <constraint firstItem="in6-T1-ao9" firstAttribute="leading" secondItem="mbh-ze-9c5" secondAttribute="leading" id="cyJ-dP-oTf"/>
+                            <constraint firstItem="3kN-TJ-AJ6" firstAttribute="height" secondItem="rZj-mT-8zG" secondAttribute="height" multiplier="0.140625" id="hXh-xW-Jvk"/>
+                            <constraint firstItem="in6-T1-ao9" firstAttribute="top" secondItem="Hih-Uj-lbc" secondAttribute="bottom" constant="185" id="kYI-6D-uu1"/>
+                            <constraint firstItem="I75-yO-ml9" firstAttribute="leading" secondItem="mbh-ze-9c5" secondAttribute="leading" constant="4" id="l3G-Wt-XAm"/>
+                            <constraint firstItem="I75-yO-ml9" firstAttribute="top" secondItem="Hih-Uj-lbc" secondAttribute="bottom" id="mj2-oL-I6H"/>
+                            <constraint firstItem="I75-yO-ml9" firstAttribute="height" secondItem="rZj-mT-8zG" secondAttribute="height" multiplier="0.208705" id="o1c-2y-sxb"/>
+                            <constraint firstItem="Hih-Uj-lbc" firstAttribute="leading" secondItem="mbh-ze-9c5" secondAttribute="leading" id="wgL-yS-Lld"/>
+                            <constraint firstItem="mbh-ze-9c5" firstAttribute="bottom" secondItem="3kN-TJ-AJ6" secondAttribute="bottom" constant="51" id="zpK-KA-eO4"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="pAg-vc-L0w"/>
+                    <tabBarItem key="tabBarItem" title="Hjem" id="pAg-vc-L0w"/>
+                    <connections>
+                        <outlet property="dayLabel" destination="EQc-gI-Zed" id="NEC-k0-ecc"/>
+                        <outlet property="descLabelOne" destination="0I3-Vx-6cC" id="gD7-eg-MMf"/>
+                        <outlet property="descLabelTwo" destination="esx-qj-QNc" id="zwO-WT-ILZ"/>
+                        <outlet property="imageView" destination="in6-T1-ao9" id="rdu-eb-VbA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A5H-Vo-1uX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-929" y="913"/>
+            <point key="canvasLocation" x="-930.43478260869574" y="835.71428571428567"/>
         </scene>
         <!--Kart-->
         <scene sceneID="WzP-Do-w6T">
             <objects>
-                <viewController storyboardIdentifier="second" id="Jy8-QG-It5" customClass="SecondViewController" customModule="Exam" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="second" id="Jy8-QG-It5" customClass="MapForecastController" customModule="Exam" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TBE-l3-ZOf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -137,7 +209,7 @@
         <!--Værmelding-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Exam" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ForecastController" customModule="Exam" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
