--- a/Exam/View/Base.lproj/Main.storyboard
+++ b/Exam/View/Base.lproj/Main.storyboard
@@ -36,6 +36,7 @@
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="in6-T1-ao9">
                                 <rect key="frame" x="0.0" y="273" width="414" height="350"/>
+                                <color key="backgroundColor" systemColor="systemGray4Color"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3kN-TJ-AJ6">
                                 <rect key="frame" x="0.0" y="636" width="414" height="126"/>
@@ -65,10 +66,10 @@
                                     <constraint firstItem="0I3-Vx-6cC" firstAttribute="top" secondItem="3kN-TJ-AJ6" secondAttribute="top" constant="8" id="thc-Hc-dCC"/>
                                 </constraints>
                             </view>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hih-Uj-lbc">
-                                <rect key="frame" x="0.0" y="44" width="0.0" height="44"/>
+                            <navigationBar contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="Hih-Uj-lbc">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <items>
-                                    <navigationItem title="Title" id="6Wa-fH-aym"/>
+                                    <navigationItem title="Hjem" id="6Wa-fH-aym"/>
                                 </items>
                             </navigationBar>
                         </subviews>
@@ -113,7 +114,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eTm-ad-3GR">
+                            <navigationBar contentMode="scaleToFill" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="eTm-ad-3GR">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <items>
                                     <navigationItem title="Kart" id="hcC-Wb-cfg">
@@ -214,7 +215,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" id="wIk-D6-W3n">
+                            <navigationBar contentMode="scaleToFill" barStyle="black" id="wIk-D6-W3n">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
@@ -258,6 +259,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tertiaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
