--- a/Exam/View/Base.lproj/Main.storyboard
+++ b/Exam/View/Base.lproj/Main.storyboard
@@ -37,6 +37,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="in6-T1-ao9">
                                 <rect key="frame" x="0.0" y="273" width="414" height="350"/>
                                 <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                <gestureRecognizers/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3kN-TJ-AJ6">
                                 <rect key="frame" x="0.0" y="636" width="414" height="126"/>
